--- a/app/claims/webapp/index.html
+++ b/app/claims/webapp/index.html
@@ -22,6 +22,15 @@
         data-sap-ui-async="true"
         data-sap-ui-frameOptions="trusted"
     ></script>
+    <script>
+        sap.ui.getCore().attachInit(function() {
+            sap.ui.require(["de/claimpilot/claims/ext/chatInit"], function(chat) {
+                if (chat && typeof chat.init === 'function') {
+                    chat.init();
+                }
+            });
+        });
+    </script>
 </head>
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
