--- a/app/claims/webapp/index.html
+++ b/app/claims/webapp/index.html
@@ -20,8 +20,10 @@
         .cp-user { background: var(--sapSelectedColor, #e9f0ff); color: var(--sapTextColor, #1b1f24); }
         .cp-assistant { background: var(--sapGroup_ContentBackground, #fafbfc); border: 1px solid var(--sapGroup_ContentBorderColor, #e5e7eb); }
         .cp-bubble-wrapper { max-width: 100%; }
-        .cp-bubble-actions { display:none; }
-        .cp-avatar { display:none; }
+        .cp-bubble-actions { margin-left: .25rem; }
+        .cp-avatar { width: 1rem; height: 1rem; margin-right: .35rem; color: #6b7280; }
+        .cp-meta { margin: 2px 8px; opacity: .85; }
+        .cp-chip { font-size: .72rem; color: #4b5563; }
         .cp-suggestions { max-width: 42rem; margin: .25rem auto; padding: .5rem 12px; display: flex; gap: .5rem; }
         .cp-suggestion-btn { border-radius: 999px; background: #f3f4f6; border: 1px solid #e5e7eb; padding: .25rem .6rem; font-weight: 500; }
         /* Markdown/code rendering inside bubbles */
@@ -32,6 +34,13 @@
         .cp-bubble h1 { font-size: 1.125rem; }
         .cp-bubble h2 { font-size: 1.0625rem; }
         .cp-bubble h3 { font-size: 1rem; }
+        .cp-bubble h4 { font-size: 0.95rem; margin: 0.25rem 0; font-weight: 600; }
+        .cp-bubble h5 { font-size: 0.9rem; margin: 0.25rem 0; font-weight: 600; }
+        .cp-bubble h6 { font-size: 0.85rem; margin: 0.25rem 0; font-weight: 600; }
+        .cp-bubble hr { border: none; border-top: 1px solid #e5e7eb; margin: .5rem 0; }
+        .cp-bubble a { color: #2563eb; text-decoration: underline; }
+        .cp-bubble .cp-li { display: block; margin: 2px 0; }
+        .cp-bubble .cp-li-num { display: block; margin: 2px 0; }
     </style>
     <script
         id="sap-ui-bootstrap"
