--- a/app/claims/webapp/index.html
+++ b/app/claims/webapp/index.html
@@ -16,18 +16,18 @@
         /* Container and layout */
         .cp-chat-container { max-width: 42rem; margin: 0 auto; padding: 0 12px; }
         /* Chat bubble styles */
-        .cp-bubble { display: inline-block; max-width: 38rem; padding: 0.6rem 0.8rem; border-radius: 0.75rem; word-wrap: break-word; margin: 6px 8px; line-height: 1.5; }
-        .cp-user { background: var(--sapSelectedColor, #e9f0ff); color: var(--sapTextColor, #1b1f24); }
-        .cp-assistant { background: var(--sapGroup_ContentBackground, #fafbfc); border: 1px solid var(--sapGroup_ContentBorderColor, #e5e7eb); }
+        .cp-bubble { box-sizing: border-box; padding: 0.6rem 0.8rem; border-radius: 0.75rem; word-wrap: break-word; margin: 6px 8px; line-height: 1.5; }
+        .cp-bubble.sapMFlexBox { display: inline-block !important; }
+        .cp-user { background: #e9f0ff; color: #1b1f24; border-radius: 1rem 1rem .375rem 1rem; max-width: 60%; }
+        .cp-assistant { background: #ffffff; border: 1px solid #e5e7eb; box-shadow: 0 1px 2px rgba(0,0,0,.04); border-radius: .75rem .75rem .75rem .25rem; }
         .cp-bubble-wrapper { max-width: 100%; }
-        .cp-bubble-actions { margin-left: .25rem; }
-        .cp-avatar { width: 1rem; height: 1rem; margin-right: .35rem; color: #6b7280; }
-        .cp-meta { margin: 2px 8px; opacity: .85; }
-        .cp-chip { font-size: .72rem; color: #4b5563; }
+        .cp-group-start { margin-top: .6rem; }
+        .cp-bubble-actions { margin-left: .25rem; opacity: 0; transition: opacity .15s ease-in-out; }
+        .cp-bubble:hover + .cp-bubble-actions { opacity: 1; }
         .cp-suggestions { max-width: 42rem; margin: .25rem auto; padding: .5rem 12px; display: flex; gap: .5rem; }
         .cp-suggestion-btn { border-radius: 999px; background: #f3f4f6; border: 1px solid #e5e7eb; padding: .25rem .6rem; font-weight: 500; }
         /* Markdown/code rendering inside bubbles */
-        .cp-bubble pre { background: #f7f7f9; padding: 0.625rem; border-radius: 0.5rem; overflow: auto; margin: .5rem 0; }
+        .cp-bubble pre { background: #0f172a; color: #e5e7eb; padding: 0.625rem; border-radius: 0.5rem; overflow: auto; margin: .5rem 0; }
         .cp-bubble code { background: #f2f2f3; padding: 0.1rem 0.25rem; border-radius: 0.25rem; }
         .cp-bubble p { margin: 0.3rem 0; }
         .cp-bubble h1, .cp-bubble h2, .cp-bubble h3 { margin: 0.25rem 0; font-weight: 600; }
@@ -41,6 +41,8 @@
         .cp-bubble a { color: #2563eb; text-decoration: underline; }
         .cp-bubble .cp-li { display: block; margin: 2px 0; }
         .cp-bubble .cp-li-num { display: block; margin: 2px 0; }
+        .cp-bubble .cp-list { margin: .25rem 0; padding-left: .5rem; }
+        .cp-bubble .cp-quote { border-left: 3px solid #e5e7eb; padding-left: .5rem; margin: .35rem 0; color: #4b5563; background: #fafafa; border-radius: .25rem; }
     </style>
     <script
         id="sap-ui-bootstrap"
