--- a/app/claims/webapp/index.html
+++ b/app/claims/webapp/index.html
@@ -43,7 +43,16 @@
         .cp-bubble .cp-li-num { display: block; margin: 2px 0; }
         .cp-bubble .cp-list { margin: .25rem 0; padding-left: .5rem; }
         .cp-bubble .cp-quote { border-left: 3px solid #e5e7eb; padding-left: .5rem; margin: .35rem 0; color: #4b5563; background: #fafafa; border-radius: .25rem; }
+
+        /* Ensure right pane and its content stretch full height */
+        #mainSplitter, #mainSplitter > .sapUiLoSplitterContent { height: 100% !important; }
+        #chatRightPane { height: 100% !important; }
+        #chatRightPane-content { height: 100% !important; }
+        #deepChatContainer { height: 100% !important; }
+        #deepChatSlot { height: 100% !important; }
     </style>
+    <!-- Deep Chat web component (CDN bundle) -->
+    <script type="module" src="https://unpkg.com/deep-chat@2.2.2/dist/deepChat.bundle.js"></script>
     <script
         id="sap-ui-bootstrap"
         src="https://sapui5.hana.ondemand.com/1.139.0/resources/sap-ui-core.js"
@@ -69,3 +78,4 @@
     <div id="appHost" style="height: 100%; width: 100%"></div>
 </body>
 </html>
+
